# ifm3d-release

./: 0001-Fix-botched-merge-disable-tests-SDK-install-package..patch  0002-Disable-installation-of-bash-completion.patch  0003-Enable-SDK-build.patch  0004-Fix-name-of-package-in-package.xml-install-directive.patch  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
eloquent/: package.xml
kinetic/: package.xml
melodic/: package.xml
modules/camera/test/: CMakeLists.txt
modules/tools/: CMakeLists.txt
rpm/: ros-galactic-ifm3d-core.spec  ros-humble-ifm3d-core.spec  ros-jazzy-ifm3d-core.spec  ros-kilted-ifm3d-core.spec  ros-lyrical-ifm3d-core.spec  ros-noetic-ifm3d-core.spec  ros-rolling-ifm3d-core.spec  template.spec
